fixing age descriptions